2010-09-17 21:24  paddockd

	* [r190] ChangeLog, makefile.linux24-alsa-display,
	  makefile.linux26-alsa-display, makefile.linux26-i64-alsa-display,
	  makefile.linux26-ppc-alsa-display, makefile.mingw32-asio-display,
	  makefile.mingw32-display, makefile.mingw32-wasapi-display,
	  makefile.osx-i64-display, makefile.osx-intel-display,
	  makefile.osx-ppc-display, sources/portaudio-r1539.tar.gz,
	  src/slimaudio/slimaudio_buffer.c,
	  src/squeezeslave/squeezeslave.c: Removed setting read_stream eof
	  to true in buffer_read blocking fix.
	  Upgraded all makefiles to PADEV r1539.
	  Increased versions to 190.

2010-09-17 15:23  paddockd

	* [r189] ChangeLog, TODO, src/slimaudio/slimaudio_http.c,
	  src/squeezeslave/squeezeslave.c: Use autostart_threshold of 40000
	  instead of server threshold for the first track only.
	  Increased version to 189.

2010-09-17 12:25  paddockd

	* [r188] ChangeLog, src/slimaudio/slimaudio_buffer.c,
	  src/slimaudio/slimaudio_buffer.h, src/slimaudio/slimaudio_http.c,
	  src/squeezeslave/squeezeslave.c: Fix for buffer_read remaining
	  blocked after the buffer has been closed.
	  Temporarily hard coded autostart_threshold to 40000 as the
	  default returned from SBS causes the player to skip a track if
	  the first song played is less than ~23 seconds in duration.
	  Increased version to 188.

2010-09-16 17:37  paddockd

	* [r187] src/slimaudio/slimaudio_buffer.c,
	  src/slimaudio/slimaudio_http.c, src/slimproto/slimproto.c,
	  src/squeezeslave/squeezeslave.c: Changed
	  slimproto_configure_socket socktimeout parameter to use
	  milliseconds for finer timeout control.
	  Added socket shutdown call after http_send.
	  Cleaned up http thread DEBUGF calls.
	  Fixed unlocking of buffer_mutex before data_len update.
	  Increased version to 187.

2010-09-01 11:27  paddockd

	* [r185] ChangeLog, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,